--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -1,4 +1,5 @@
 ;METADATA=(Diff=true, UseCommands=true)
+
 [/Script/GameplayTags.GameplayTagsSettings]
 ImportTagsFromConfig=True
 WarnOnInvalidTags=True
@@ -11,5 +12,7 @@ InvalidTagCharacters="\"\',"
 NumBitsForContainerSize=6
 NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Abilities.Kick",DevComment="")
++GameplayTagList=(Tag="Abilities.LightAttack",DevComment="")
 +GameplayTagList=(Tag="State.IsKicking",DevComment="")
++GameplayTagList=(Tag="State.IsLightAttacking",DevComment="")
 
