--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -10,3 +10,5 @@ InsertPack=(PackSource="StarterContent.upack",PackName="StarterContent")
 [SectionsToSave]
 +Section=StartupActions
 
+[/Script/GameplayAbilities.AbilitySystemGlobals]
+bUseDebugTargetFromHud=true
