--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -1,4 +1,5 @@
 ;METADATA=(Diff=true, UseCommands=true)
+
 [/Script/GameplayTags.GameplayTagsSettings]
 ImportTagsFromConfig=True
 WarnOnInvalidTags=True
@@ -12,6 +13,12 @@ NumBitsForContainerSize=6
 NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Abilities.Kick",DevComment="")
 +GameplayTagList=(Tag="Abilities.LightAttack",DevComment="")
++GameplayTagList=(Tag="Event.Montage.Kick",DevComment="")
++GameplayTagList=(Tag="Event.Montage.Punch",DevComment="")
++GameplayTagList=(Tag="Gameplay.Cooldown.Kick",DevComment="")
++GameplayTagList=(Tag="Gameplay.Cooldown.Punch",DevComment="")
++GameplayTagList=(Tag="Gameplay.Magnitude.Duration",DevComment="")
++GameplayTagList=(Tag="GameplayCue.HitReact",DevComment="")
 +GameplayTagList=(Tag="State.IsKicking",DevComment="")
 +GameplayTagList=(Tag="State.IsLightAttacking",DevComment="")
 
