Combat system borderline working

--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -1,5 +1,4 @@
 ;METADATA=(Diff=true, UseCommands=true)
-
 [/Script/GameplayTags.GameplayTagsSettings]
 ImportTagsFromConfig=True
 WarnOnInvalidTags=True
@@ -9,16 +8,21 @@ AllowGameTagUnloading=False
 FastReplication=False
 bDynamicReplication=False
 InvalidTagCharacters="\"\',"
++GameplayTagRedirects=(OldTagName="GameplayCue.HitReact.Player",NewTagName="GameplayCue.HitReactPlayer")
 NumBitsForContainerSize=6
 NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Abilities.Kick",DevComment="")
 +GameplayTagList=(Tag="Abilities.LightAttack",DevComment="")
++GameplayTagList=(Tag="Abilities.Mummy.LightAttack",DevComment="")
 +GameplayTagList=(Tag="Event.Montage.Kick",DevComment="")
++GameplayTagList=(Tag="Event.Montage.Mummy.LightAttack",DevComment="")
 +GameplayTagList=(Tag="Event.Montage.Punch",DevComment="")
 +GameplayTagList=(Tag="Gameplay.Cooldown.Kick",DevComment="")
 +GameplayTagList=(Tag="Gameplay.Cooldown.Punch",DevComment="")
 +GameplayTagList=(Tag="Gameplay.Magnitude.Duration",DevComment="")
 +GameplayTagList=(Tag="GameplayCue.HitReact",DevComment="")
++GameplayTagList=(Tag="GameplayCue.HitReactPlayer",DevComment="")
 +GameplayTagList=(Tag="State.IsKicking",DevComment="")
 +GameplayTagList=(Tag="State.IsLightAttacking",DevComment="")
++GameplayTagList=(Tag="State.IsStaggered",DevComment="")
 
