--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -81,3 +81,6 @@ ConnectionType=USBOnly
 bUseManualIPAddress=False
 ManualIPAddress=
 
+
+[CoreRedirects]
++PropertyRedirects=(OldName="/Script/AnubisUnreal.MummyCharacter.fSightRadius",NewName="/Script/AnubisUnreal.MummyCharacter.fChaseRadius")
