--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,7 +1,7 @@
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Maps/Start_Level.Start_Level
+GameDefaultMap=/Game/Maps/MainMenu.MainMenu
 EditorStartupMap=/Game/Maps/Start_Level.Start_Level
-GlobalDefaultGameMode="/Script/AnubisUnreal.AnubisUnrealGameMode"
+GlobalDefaultGameMode=/Game/GameMode/GM_AnubisUnrealGameMode.GM_AnubisUnrealGameMode_C
 
 [/Script/Engine.RendererSettings]
 r.ReflectionMethod=1
