--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -1,4 +1,5 @@
 ;METADATA=(Diff=true, UseCommands=true)
+
 [/Script/GameplayTags.GameplayTagsSettings]
 ImportTagsFromConfig=True
 WarnOnInvalidTags=True
@@ -14,6 +15,7 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Abilities.Kick",DevComment="")
 +GameplayTagList=(Tag="Abilities.LightAttack",DevComment="")
 +GameplayTagList=(Tag="Abilities.Mummy.LightAttack",DevComment="")
++GameplayTagList=(Tag="Abilities.MyJump",DevComment="")
 +GameplayTagList=(Tag="Event.Montage.Kick",DevComment="")
 +GameplayTagList=(Tag="Event.Montage.Mummy.LightAttack",DevComment="")
 +GameplayTagList=(Tag="Event.Montage.Punch",DevComment="")
@@ -22,6 +24,7 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Gameplay.Magnitude.Duration",DevComment="")
 +GameplayTagList=(Tag="GameplayCue.HitReact",DevComment="")
 +GameplayTagList=(Tag="GameplayCue.HitReactPlayer",DevComment="")
++GameplayTagList=(Tag="State.IsJumping",DevComment="")
 +GameplayTagList=(Tag="State.IsKicking",DevComment="")
 +GameplayTagList=(Tag="State.IsLightAttacking",DevComment="")
 +GameplayTagList=(Tag="State.IsStaggered",DevComment="")
